--- a/final/任务一/home/css/1.less
+++ b/final/任务一/home/css/1.less
@@ -51,7 +51,7 @@ li{
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
-			width: 50%;
+			max-width: 50%;
 		}
 		
 		span{
