--- a/final/任务一/home/css/2.less
+++ b/final/任务一/home/css/2.less
@@ -54,7 +54,7 @@ li{
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
-			width: 50%;
+			max-width: 50%;
 		}
 		
 		span{
